--- a/sipxpbx/WEB-INF/firewall/EditFirewallServerGroups.properties
+++ b/sipxpbx/WEB-INF/firewall/EditFirewallServerGroups.properties
@@ -1,11 +1,11 @@
-addServerGroup = Add Group 
-system.PUBLIC = Allow any server to connect.
-system.CLUSTER = Only servers managed by this system, those listed in System/Servers menu.
-customGroups = Custom Groups
-systemGroups = System Groups
+addServerGroup = F\u00FCge Gruppe hinzu
+system.PUBLIC = Erlaube jedem Server sich zu verbinden.
+system.CLUSTER = Nur Server die von diesem System betreut werden, jene welche im System/Server Men\u00FC gelistet sind.
+customGroups = custom Gruppen
+systemGroups = System Gruppen
 customName = Name
-customServers = Allowed servers
+customServers = Erlaubte Servers
 systemName = Name
-systemServers = Allowed servers
-confirm.delete = Are you sure you want to delete selected groups?
-label.delete = Delete
+systemServers = Erlaubte Servers
+confirm.delete = Sind Sie sicher, dass Sie die ausgew\u00E4hlte Gruppe l\u00F6schen wollen?
+label.delete = L\u00F6sche
