--- a/sipxpbx/WEB-INF/firewall/ManageFirewall.properties
+++ b/sipxpbx/WEB-INF/firewall/ManageFirewall.properties
@@ -1,5 +1,5 @@
-tab.rules = Rules
-tab.groups = Groups
-tab.settings = Settings
-tab.unmanaged = Unmanaged service
-quick.help=Firewall using iptables. Rules are determined automatically based on what services are running.
+tab.rules = Regeln
+tab.groups = Gruppen
+tab.settings = Einstellungen
+tab.unmanaged = Unbetreute Services
+quick.help=Die Firewall benutzt IP Tables. Die Regeln werden automatisch festgesetzt, basierend darauf welche Services laufen.
