--- a/sipxpbx/WEB-INF/freeswitch/EditFreeswitch.properties
+++ b/sipxpbx/WEB-INF/freeswitch/EditFreeswitch.properties
@@ -1,5 +1,5 @@
-title=Media Services
-button.activate=Apply
+title=Medien Services
+button.activate=\u00FCbernehmen
 name=Server
-address=IP Address
-quick.help=Media Services handle calls that require media processing. The following services depend on this service being enabled: Authorization Code, Auto Attendant, Conferencing, Contact Center, and Voicemail.
+address=IP Adresse
+quick.help=Medien Services verwalten Anrufe welche eine Medien Funktion voraussetzen. Die folgenden Services sind davon abh\u00E4ngig ob dieser Service l\u00E4uft: Authorisierungs Code, Auto Teilnahme, Konferenzen, Kontakt Center und Voicemail.
