--- a/sipxpbx/WEB-INF/freeswitch/EditFreeswitchLocation.properties
+++ b/sipxpbx/WEB-INF/freeswitch/EditFreeswitchLocation.properties
@@ -1,2 +1,2 @@
-title=Edit Media Services setting
-crumb.edit.freeswitch=Media Services Config
+title=Bearbeite Medien Services Einstellungen
+crumb.edit.freeswitch=Medien Services Konfiguration
