--- a/sipxpbx/WEB-INF/imbot/EditIMBot.properties
+++ b/sipxpbx/WEB-INF/imbot/EditIMBot.properties
@@ -1,1 +1,1 @@
-quick.help=Instant Messaging Interactive RoBot. This service provide the MyBuddy feature for Instant Messaging users. Only one IM Bot service is allowed per cluster and is an optional service. This service requires the IM-XMPP service to be enabled!
+quick.help=Instant Messaging Interaktiver RoBot. Dieser Service stellt die MyBuddy Funktion f\u00FCr Instant Messaging Benutzer zur Verf\u00FCgung. Nur ein IM Bot Service ist per Cluster erlaubt und es ist ein optionaler Service. Dieser Service setzt voraus, dass der IM-XMPP Service aktiviert ist!
