--- a/sipxpbx/WEB-INF/ivr/EditIvr.properties
+++ b/sipxpbx/WEB-INF/ivr/EditIvr.properties
@@ -1,1 +1,1 @@
-                    quick.help=VoiceMail and Auto Attendant telephony applications. Only one service is allowed per cluster and is an optional service. Enabling this will also automatically enable Media Services for this location.
+                    quick.help=VoiceMail und Auto Annahme Telefonie Applikationen. Nur ein Service ist pro Cluster erlaut und der Service ist optional. Diesen Service einzuschalten wird automatisch die Medien Services f\u00FCr diesen Ort aktivieren.
