--- a/sipxpbx/WEB-INF/logwatcher/EditLogWatcher.properties
+++ b/sipxpbx/WEB-INF/logwatcher/EditLogWatcher.properties
@@ -1,1 +1,1 @@
-quick.help=Service that reads incoming log messages and reacts accordingly. Typically used to trigger a SNMP alarms.
+quick.help=Service, welcher eingehende Log Nachrichten liest und dementsprechend reagiert. Normalerweise benutzt um SNMP Alarme auszul\u00F6sen.
