--- a/sipxpbx/WEB-INF/mwi/EditMwi.properties
+++ b/sipxpbx/WEB-INF/mwi/EditMwi.properties
@@ -1,1 +1,1 @@
-quick.help=Message Waiting Indicator service for incoming voice mail messages. One or more MWI services are required per cluster.
+quick.help=Neue Nachrichten Indikations Service für eingehende Voicemails. Einer oder mehrere MWI Services sind pro Cluster n\u00F6tig.
