--- a/sipxpbx/WEB-INF/networkqueue/EditNetworkQueue.properties
+++ b/sipxpbx/WEB-INF/networkqueue/EditNetworkQueue.properties
@@ -1,1 +1,1 @@
-quick.help=Network Queue passes message through cluster including presence. 
+quick.help=Netzwerk Warteschlange leitet Mitteilungen durch den Cluster. 
