--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdAgentGroupPage.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdAgentGroupPage.properties
@@ -1,10 +1,10 @@
-label.name=Agent Group Name
-label.description=Description
-label.skills=Skills
-blank.agentGroupName.error=You must enter a value for Agent Group Name.
-duplicate.agentGroupName.error=An agent group with this name is already defined.
-msg.err.defaultAgentGroupRename=The Default agent group cannot be renamed!
-title=Contact Center Agent Group
-link.skillsPage=Skills
-quick.help=Select the skills that are provided by agents that are a member of the group. <br/> \
-  Additional skills can be defined on the Skills page.
+label.name=Agent Gruppen Name
+label.description=Beschreibung
+label.skills=Fertigkeiten
+blank.agentGroupName.error=Sie m\u00FCssen einen Wert eingeben für den Agent Gruppen Namen.
+duplicate.agentGroupName.error=Es gibt bereits eine Agent Gruppe mit diesem Namen.
+msg.err.defaultAgentGroupRename=Die Standart Agent Gruppe kann nicht umbenannt werden!
+title=Kontakt Center Agent Gruppe
+link.skillsPage=Fertigkeiten
+quick.help=W\u00E4hlen Sie die Fertigkeiten aus, die von Agents, die Mitglieder der Gruppe sind zur Verf\u00FCgung gestellt werden sollen. <br/> \
+  Zus\u00E4tzliche Fertigkeiten k\u00F6nnen auf der Fertigkeiten Seite definiert werden.
