--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdAgentPage.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdAgentPage.properties
@@ -1,17 +1,17 @@
-title=Contact Center Agent
+title=Kontakt Center Agent
 label.agentId=Agent ID
-label.agentFirstName=First Name
-label.agentLastName=Last Name
-label.agentGroup=Agent Group
-label.agentSecurity=Security
-description.agentId=Internal agent extension
-description.agentPassword=Password to login to the contact center application
-description.agentGroup=Select a agent group which will contains this agent
-description.agentSecurity=Level of access in the the contact center application
-description.inheritedSkills=Skills inherited from agent group:
-blank.agentGroup.error=You must select a value for Agent Group.
-blank.agentSecurity.error=You must select a value for Agent Security.
-link.skillsPage=Skills
-quick.help=Agents have an internal extension on the system and a password to login to the contact center application. \
-  Security is the level of access the agent is granted. <br/><br/>\
-  Selected skills are merged with the agent's group skills. Additional skills can be defined on the Skills page.
+label.agentFirstName=Vorname
+label.agentLastName=Nachname
+label.agentGroup=Agent Gruppe
+label.agentSecurity=Sicherheit
+description.agentId=Interne Agent Erweiterung
+description.agentPassword=Passwort um sich in die Kontakt Center Applikation einzuloggen
+description.agentGroup=W\u00E4hlen Sie eine Agent Gruppe, welche diesen Agent beinhalten soll
+description.agentSecurity=Zugangs Level in der Kontakt Center Applikation
+description.inheritedSkills=Fertigkeiten die von der Agent Gruppe \u00FCbernommen werden sollen:
+blank.agentGroup.error=Sie m\u00FCssen einen Wert eingeben für die Agent Gruppe.
+blank.agentSecurity.error=Sie m\u00FCssen einen Wert eingeben f\u00FCr die Agent Sicherheit.
+link.skillsPage=Fertigkeiten
+quick.help=Agents haben eine interne Erweiterung im System und ein Passwort um sich in die Kontakt Center Applikation einzuloggen. \
+  Sicherheit ist der Level des Zugangs der dem Agent gew\u00E4hrt wird. <br/><br/>\
+  Ausgew\u00E4hlte Fertigkeiten werden mit den Gruppen Fertigkeiten des Agents verbunden. Weitere Fertigkeiten k\u00F6nnen mit der Fertigkeiten Seite definiert werden.
