--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdClientPage.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdClientPage.properties
@@ -1,7 +1,7 @@
-title=Contact Center Client
+title=Kontakt Center Client
 label.name=Name
-label.identity=Identity
-label.description=Description
-duplicate.clientName.error=A client with this name is already defined.
-duplicate.clientIdentity.error=A client with this identity is already defined.
-quick.help=The Identity is the internal representation of the client. Identity value cannot be modified after the client is created.
+label.identity=Identit\u00E4t
+label.description=Beschreibung
+duplicate.clientName.error=Ein Client mit diesem Namen ist bereits definiert.
+duplicate.clientIdentity.error=Ein Client mit dieser Identit\u00E4t ist bereits definiert.
+quick.help=Die Identit\u00E4t ist die interne Identifizierung des Clients. Die Identit\u00E4t kann nicht mehr ge\u00E4ndert werden, nachdem der Client erstellt worden ist.
