--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdCommand.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdCommand.properties
@@ -1,13 +1,13 @@
-title=Contact Center Agent Dial String
-quick.help=Edit agent dial string.
-label.enableCommand=Enable
+title=Kontakt Center Agent W\u00E4hl String
+quick.help=Bearbeite Agent W\u00E4hl String.
+label.enableCommand=Aktivieren
 label.name=Name
-label.description=Description
-label.extension=Extension
-section.options=Options
-label.action=Action
-label.application=application
-label.data=data
-label.addAction=Add new action
-null.name=Name cannot be empty
-null.extension=Extension cannot be empty
+label.description=Beschreibung
+label.extension=Erweiterung
+section.options=Optionen
+label.action=Aktion
+label.application=Applikation
+label.data=Daten
+label.addAction=F\u00FCge neue Aktion hinzu
+null.name=Name darf nicht leer sein
+null.extension=Erweiterung kann nicht leer sein
