--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdLine.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdLine.properties
@@ -1,49 +1,48 @@
+description.alias     = Zus\u00E4tzlicher Name f\u00FCr die Line
+description.client    = W\u00E4hlen Sie einen Client aus, der mit der Line verbunden wird
+description.did       = Direkte Eingangswahlnummer. Wird benutzt um von einem externen Anschluß aus anzurufen.
+description.extension = Interne Line Erweiterung
+description.queue     = W\u00E4hlen Sie eine Warteschlange aus, die mit dieser Line verbunden wird
+description.regex     = Aktivieren Sie dies, wenn Sie einen regul\u00E4ren Ausdruck als Line Erweiterung nutzen wollen. Schauen Sie in der Schnell Hilfe nach f\u00FCr weitere Informationen.
+description.voicemail = Voicemail erlauben, w\u00E4hrend in der Warteschlange (durch Dr\u00FCcken von *)
+description.welcome   = W\u00E4hlen, oder laden Sie eine bestimmte Datei, die gespielt werden soll, w\u00E4hrend gewartet wird.
 
-description.alias     = Additional name for the line
-description.client    = Select a client that will be associated with this line
-description.did       = Direct Inward Dialing number. Used to call from an external line.
-description.extension = Internal line extension
-description.queue     = Select a queue that will be associated with this line
-description.regex     = Check this if you want to use a regular expression as line's extension. Check quick help for more explanation.
-description.voicemail = Allow to leave a voicemail while waiting in the queue (by pressing *)
-description.welcome   = Select or upload a specific file to play on hold music
+error.regex.invalid        = Die verwendete Vorlage ist kein zugelassener regul\u00E4rer Ausdruck.
+error.regex.no.valid.group = Sie m\u00FCssen den regul\u00E4ren Ausdruck mit einer Empfangsgruppe einleiten, welcher die aktuelle Line Erweiterung ist. Sie d\u00FCrfen nur Zuahlen benutzen in dieser Gruppe. Beispiel: (123)
+error.requiredClient       = Sie m\u00FCssen einen Client ausw\u00E4hlen.
+error.requiredQueue        = Sie m\u00FCssen eine Warteschlange ausw\u00E4hlen.
+error.select               = Kein Sound ausgew\u00E4hlt
+error.validPhone           = Bitte geben Sie nur Zahlen ein, zum Beispiel: 123.
 
-error.regex.invalid        = The pattern provided is not a valid regular expression.
-error.regex.no.valid.group = You must start the regular expression with a capture group that is the actual line extension. You must use digits only in the group. Example: (123)
-error.requiredClient       = You must select a Client.
-error.requiredQueue        = You must select a Queue.
-error.select               = No sound selected
-error.validPhone           = Please enter digits only, for example: 123.
-
-label.acd         = When Contact Center receives call
-label.action      = Action
-label.addAction   = Add new action
-label.agent       = Delayed answer supervision
+label.acd         = Wenn das Kontakt Center einen Anruf empf\u00E4ngt
+label.action      = Aktion
+label.addAction   = F\u00FCge neue Aktion hinzu
+label.agent       = Zeitversetze Antwort Kontrolle
 label.alias       = Alias
-label.allowvm     = Allow voicemail
-label.answersuper = Answer supervision mode
-label.application = application
+label.allowvm     = Erlaube Voicemail
+label.answersuper = Antwort Kontroll Modus
+label.application = Applikation
 label.client      = Client
-label.condition   = Condition
-label.data        = data
-label.description = Description
+label.condition   = Zustand
+label.data        = Daten
+label.description = Beschreibung
 label.did         = DID Number
-label.expression  = Expression
-label.extension   = Extension
-label.field       = Field
-label.fs          = Immediate answer supervision
-label.insert      = Save Line
+label.expression  = Ausdruck
+label.extension   = Erweiterung
+label.field       = Feld
+label.fs          = Sofortige Antwort Kontrolle
+label.insert      = Sichere Line
 label.name        = Name
-label.queue       = Queue
-label.regex       = Regular expression
-label.welcome     = Welcome message
+label.queue       = Warteschlange
+label.regex       = regul\u00E4rer Ausdruck
+label.welcome     = Willkommens Nachricht
 
-null.extension = Extension cannot be empty
-null.name      = Name cannot be empty
+null.extension = Erweiterung darf nicht leer sein
+null.name      = Name darf nicht leer sein
 
-quick.help                   = Lines route calls into queues.  Each line is assigned to a particular client and queue and each line has an extension, and optional DID and alias assigned. \n<p>\n<b>Answer supervision</b> defines the possibility of a called party to notify the central office the call is being answered. <br/>There are a number of situations when you might want to have that in a number of forms (e.g. for billing purposes).<br/>\n<ul>\n<li><i>Immediate answer supervision</i> Send answer supervision when Freeswitch receives the call</li>\n<li><i>When Call Center receives the call</i> Send answer supervision when the call hits the ACD</li>\n<li><i>Delayed answer supervision</i> Provide answer supervision when the call is actually picked up by an agent</li>\n</ul>\n</p>
-quick.help.regularExpression = <p><b>Note for using regular expressions</b>:<br> Use regular expression cautiously. Enable it when you might have for instance a carrier including a <i>carrier identification code</i> in a SIP request (e.g. <i>INVITE sip:12345;cic=0123@1.2.3.4;user=phone</i>)<br> The regular expression must start with a capturing group that's the actual line extension. Actually, the regular expression is itself validated against this regular expression "\\((.*)\\).*".<br> Also avoid the use of catch all expressions (like .* or .+) because you cannot trust information from the sender.<br> <i>Examples</i>: <ul><li><i>(501)(;cic=1234)?</i> - this will call line 501 regardless if the carrier adds <i>;cic=1234</i> to its invite or not</li> <li><i>(501)(;cic=\\d\\d\\d\\d)?</i> - this will call line 501 even if carrier adds a 4 digit cic </li> <li><i>(501)(;cic=(\\d{1,8}))?</i> - this will call line 501 even if carrier adds a cic formed by 1 to 8 digits </li></ul></p>
+quick.help                   = Lines leiten Anrufe in Warteschlangen.  Jede Line ist einem einzelnen Client und Warteschlange zugewiesen und jede Line hat eine Erweiterung und optionale DID und alias zugewiesen. \n<p>\n<b>Antwort Kontrolle</b> definiert die M\u00F6glichkeit eines Angerufenen die Zentrale zu benachrichtigen, dass der Anruf beantwortet wird. <br/>Es gibt eine Anzahl an Situationen in denen Sie dies als Anzahl der Formulare haben m\u00F6chten (z.B. zu Zahlungszwecken).<br/>\n<ul>\n<li><i>Sofortige Antwort Kontrolle</i> Sende Antwort an Kontrolle, wenn Freeswitch den Anruf bekommt</li>\n<li><i>Wenn das Anrufcenter den Anruf bekommt</i> Sende Antwort an Kontrolle wenn das ACD den Anruf bekommt</li>\n<li><i>Verz\u00F6gerte Antwort Kontrolle</i> Sende Antwort an Kontrolle, wenn ein Anruf von einem Agent angenommen wird</li>\n</ul>\n</p>
+quick.help.regularExpression = <p><b>Hinweis zum Benutzen von regul\u00E4ren Ausdr\u00FCcken </b>:<br> Nutzen Sie regul\u00E4re Ausdr\u00FCcke vorsichtig. Schalten Sie es ein, wenn Sie z.b. einen Carrier mit einem Carrier Identifikations Code in einer SIP Anfrage haben <i>Carrier Identification Code</i> (e.g. <i>INVITE sip:12345;cic=0123@1.2.3.4;user=phone</i>)<br> Die regul\u00E4ren Ausdr\u00FCcke m\u00FCssen mit einem Anfangsbereich starten, welcher die aktuelle Line Erweiterung ist. Der regul\u00E4re Ausdruck selbst ist g\u00FCltig für diesen Ausdruck "\\((.*)\\).*".<br> Versuchen Sie ebenfalls den Gebrauch von allen Ausdr\u00FCcken (wie .* oder .+) zu vermeiden, denn Sie k\u00F6nnen Informationen des Senders nicht vertrauen.<br> <i>Beispiel</i>: <ul><li><i>(501)(;cic=1234)?</i> - dies wird die Linie 501 anrufen, egal ob der Carrier <i>;cic=1234</i> hinzuf\u00FCgt zu seinen Einladungen, oder nicht.</li> <li><i>(501)(;cic=\\d\\d\\d\\d)?</i> - dies wird Line 501 anrufen, selbst wenn der Carrier eine CIC hinzuf\u00FCgt, welche aus 1 bis 8 Zahlen besteht</li> <li><i>(501)(;cic=(\\d{1,8}))?</i> </li></ul></p>
 
-section.options = Options
+section.options = Optionen
 
-title = Contact Center Line
+title = Kontakt Center Line
