--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdQueueGroupPage.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdQueueGroupPage.properties
@@ -1,9 +1,9 @@
-title=Contact Center Queue Group
-label.name=Queue Group Name
-label.description=Description
-blank.queueGroupName.error=You must enter a value for Queue Group Name.
-duplicate.queueGroupName.error=A queue group with this name is already defined.
-msg.err.defaultQueueGroupRename=The Default queue group cannot be renamed!
-link.skillsPage=Skills
-quick.help=Select the skill requirements that will be assigned to a media (call, email, voicemail) when it enters a queue that is in this group.<br/> \
-  Additional skills can be defined on the Skills page.
+title=Kontakt Center Warteschlangen Gruppe
+label.name=Warteschlangen Gruppen Name
+label.description=Beschreibung
+blank.queueGroupName.error=Sie m\u00FCssen einen Wert eingeben für Warteschlangen Gruppen Name.
+duplicate.queueGroupName.error=Eine Warteschlangen Gruppe mit diesem Namen existiert bereits.
+msg.err.defaultQueueGroupRename=Die Standart Warteschlangen Gruppe kann nicht umbenannt werden!
+link.skillsPage=F\u00E4higkeiten
+quick.help=W\u00E4hlen Sie die Voraussetzungs F\u00E4higkeiten aus, welche Medien zugewiesen werden (Anruf, E-Mail, Voicemail) wenn eine Warteschlange betreten wird, die in dieser Gruppe ist.<br/> \
+  Zus\u00E4tzliche F\u00E4higkeiten k\u00F6nnen auf der F\u00E4higkeiten Seite definiert werden.
