--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdReleaseCodePage.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdReleaseCodePage.properties
@@ -1,8 +1,8 @@
-title=Contact Center Release Code
+title=Kontakt Center Ver\u00F6ffentlichungs Code
 label.label=Label
 label.bias=Bias
-label.bias.negative=Negative
+label.bias.negative=Negativ
 label.bias.neutral=Neutral
-label.bias.positive=Positive
-label.description=Description
-duplicate.codeLabel.error=A release code with this label is already defined.
+label.bias.positive=Positiv
+label.description=Beschreibung
+duplicate.codeLabel.error=Ein Ver\u00F6ffentlichungs Code mit diesem Label existiert bereits.
