--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdSkillGroupPage.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdSkillGroupPage.properties
@@ -1,6 +1,6 @@
-title=Contact Center Skill Group
-label.name=Skill Group Name
-label.description=Description
-blank.skillGroupName.error=You must enter a value for Skill Group Name.
-duplicate.skillGroupName.error=A skill group with this name is already defined.
-msg.err.magicSkillGroupRename=The Magic skill group cannot be renamed!
+title=Kontakt Center F\u00E4higkeiten Gruppe
+label.name=F\u00E4higkeiten Gruppen Name
+label.description=Beschreibung
+blank.skillGroupName.error=Sie m\u00FCssen einen Wert eingeben für F\u00E4higkeiten Gruppen Name.
+duplicate.skillGroupName.error=Eine F\u00E4higkeiten Gruppe mit diesem Namen existiert bereits.
+msg.err.magicSkillGroupRename=Die Magic F\u00E4higkeiten Gruppe kann nicht umbenannt werden!
