--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdSkillPage.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdSkillPage.properties
@@ -1,14 +1,14 @@
-title=Contact Center Skill
+title=Kontakt Center F\u00E4higkeiten
 label.name=Name
 label.atom=Atom
-label.group=Skill Group
-label.description=Description
-description.group=To create a skill group, give a skill a group that does not exist. <br/>\
-	A group is automatically deleted when there are no skills in it.
-blank.skillName.error=You must enter a value for Name.
-blank.skillAtom.error=You must enter a value for Atom.
-error.requiredSkillGroup=You must select a value for Group.
-error.forbiddenMagicSkillGroup=You cannot add a magic skill
-duplicate.skillName.error=A skill with this name is already defined.
-duplicate.skillAtom.error=A skill with this atom is already defined.
-quick.help=The Atom is the internal representation of the skill. Atom value cannot be modified after the skill is created.
+label.group=F\u00E4higkeiten Gruppe
+label.description=Beschreibung
+description.group=Um eine F\u00E4higkeiten Gruppe zu erstellen, geben Sie einer F\u00E4higkeit einen Namen, welcher noch nicht exisitiert. <br/>\
+	Eine Gruppe wird automatisch gel\u00F6scht, wenn keine F\u00E4higkeiten mehr darin sind.
+blank.skillName.error=Sie m\u00FCssen einen Wert eingeben für Name.
+blank.skillAtom.error=Sie m\u00FCssen einen Wert eingeben für Atom.
+error.requiredSkillGroup=Sie m\u00FCssen einen Wert eingeben für Gruppe.
+error.forbiddenMagicSkillGroup=Sie k\u00F6nnen keinen magic skill hinzuf\u00FCgen.
+duplicate.skillName.error=Eine F\u00E4higkeit mit diesem Namen ist bereits definiert.
+duplicate.skillAtom.error=Eine F\u00E4higkeit mit diesem Atom ist bereits definiert.
+quick.help=Das Atom ist die interne Repr\u00E4sentation der F\u00E4higkeit. Der Wert des Atoms kann nicht mehr modifiziert werden, nachdem die F\u00E4higkeit erzeugt wurde.
