--- a/sipxpbx/WEB-INF/openacd/OpenAcdAddAgentsToGroupPage.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdAddAgentsToGroupPage.properties
@@ -1,20 +1,20 @@
-title=Contact Center Agents
-label.agentGroup=Agent Group
-label.agentSecurity=Security
-description.agentGroup=Select a agent group which will contains this agent(s)
-description.agentSecurity=Level of access in the the contact center application
-description.inheritedSkills=Skills inherited from agent group:
-link.addUsers=Add Users
-title.selectAgents=Select Users
-prompt.selectAgents=Search for the user to be added as agent.
-blank.agentGroup.error=You must select a value for Agent Group.
-blank.agentSecurity.error=You must select a value for Agent Security.
-error.requiredUser=You must select users to add as contact center agents
-duplicate.agents.error={0} already defined as agent(s).
-link.skillsPage=Skills
-quick.help=You can add in bulk agents to an agent group. <br/><br/>\
-  Security is the level of access the agent is granted. <br/><br/>\
-  Select the skills that will be applied to all the agents. \
-  Selected skills are merged with the agent's group skills. Additional skills can be defined on the Skills page. <br/><br/>\
-  Click the Add Users link to add users as contact center agents. \
-  You can search for users that match specified criteria. \
+title=Kontakt Center Agents
+label.agentGroup=Agent Gruppe
+label.agentSecurity=Sicherheit
+description.agentGroup=W\u00E4hlen Sie eine Agent Gruppe, welche folgende Agents enth\u00E4lt
+description.agentSecurity=Zugangslevel in der Kontakt Center Applikation
+description.inheritedSkills=F\u00E4higkeiten die durch die Agent Gruppe gew\u00E4hrt werden:
+link.addUsers=F\u00FCge Benutzer hinzu
+title.selectAgents=W\u00E4hle Benutzer aus
+prompt.selectAgents=Nach dem Benutzer suchen, der als Agent hinzugef\u00FCgt werden soll.
+blank.agentGroup.error=Sie m\u00FCssen einen Wert eingeben f\u00FCr die Agent Gruppe.
+blank.agentSecurity.error=Sie m\u00FCssen einen Wert eingeben f\u00FCr Agent Sicherheit.
+error.requiredUser=Sie m\u00FCssen Benutzer ausw\u00E4hlen, welche als Kontakt Center Agents hinzugef\u00FCgt werden sollen.
+duplicate.agents.error={0} wurde(n) bereits als Agent definiert.
+link.skillsPage=F\u00E4higkeiten
+quick.help=Sie k\u00F6nnen Agents in großen Menden zu einer Gruppe zuweisen. <br/><br/>\
+  Sicherheit ist der Zugangslevel der dem Agent zugestanden wird. <br/><br/>\
+  W\u00E4hlen Sie die fertigkeiten aus, die allen Agents zugeteilt werden. \
+  Die gew\u00E4hlten Fertigkeiten werden mit den Agents Gruppen Fertigkeiten fusioniert. Zus\u00E4tzliche Fertigkeiten k\u00F6nnen auf der Fertigkeiten Seite definiert werden. <br/><br/>\
+  Klicken Sie auf den Benutzer hinzuf\u00FCgen Link um Benutzer als Kontakt Center Agents hinzuzuf\u00FCgen. \
+  Sie k\u00F6nnen nach Benutzern suchen, die bestimmte Kriterien erf\u00FCllen. \
