--- a/sipxpbx/WEB-INF/openacd/OpenAcdAgentGroupsPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdAgentGroupsPanel.properties
@@ -1,7 +1,7 @@
-link.addAgentGroup=Add new Agent Group
+link.addAgentGroup=Füge neue Agent Gruppe hinzu
 name=Name
-agentCount=Number of Agents
-description=Description
-confirm.delete=Are you sure you want to delete selected agent group(s)? WARNING: deleting a group will delete all agents in that group.
-msg.err.defalutAgentGroupDeletion=The 'Default' agent group can't be deleted!
-title=Contact Center Agent Groups
+agentCount=Nummer an Agents
+description=Beschreibung
+confirm.delete=Sind Sie sicher, dass Sie den(die) ausgewählten Agent Gruppen löschen wollen? WARNUNG: Wenn Sie eine Gruppe löschen, löscht das automatisch alle Agents in der Gruppe.
+msg.err.defalutAgentGroupDeletion=Die 'Default' Agent Gruppe kann nicht gelöscht werden!
+title=Kontakt Center Agent Gruppe
