--- a/sipxpbx/WEB-INF/openacd/OpenAcdAgentGroupsPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdAgentGroupsPanel.properties
@@ -1,7 +1,7 @@
-link.addAgentGroup=Füge neue Agent Gruppe hinzu
+link.addAgentGroup=F\u00FCge neue Agent Gruppe hinzu
 name=Name
 agentCount=Nummer an Agents
 description=Beschreibung
-confirm.delete=Sind Sie sicher, dass Sie den(die) ausgewählten Agent Gruppen löschen wollen? WARNUNG: Wenn Sie eine Gruppe löschen, löscht das automatisch alle Agents in der Gruppe.
-msg.err.defalutAgentGroupDeletion=Die 'Default' Agent Gruppe kann nicht gelöscht werden!
+confirm.delete=Sind Sie sicher, dass Sie den(die) ausgew\u00E4hlten Agent Gruppen l\u00F6schen wollen? WARNUNG: Wenn Sie eine Gruppe l\u00F6schen, l\u00F6scht das automatisch alle Agents in der Gruppe.
+msg.err.defalutAgentGroupDeletion=Die 'Default' Agent Gruppe kann nicht gel\u00F6scht werden!
 title=Kontakt Center Agent Gruppe
