--- a/sipxpbx/WEB-INF/openacd/OpenAcdAgentsPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdAgentsPanel.properties
@@ -1,8 +1,8 @@
-title=Contact Center Agents
-link.addAgents=Add new Agents
+title=Kontakt Center Agents
+link.addAgents=F\u00FCge neue Agents hinzu
 agentId = Agent ID
-agentGroup = Agent Group
-agentSkills = Skills
-agentSecurity = Security
-confirm.delete=Are you sure you want to delete selected agent(s)?
-label.moveToAgentGroup=Move to:
+agentGroup = Agent Gruppe
+agentSkills = Fertigkeiten
+agentSecurity = Sicherheit
+confirm.delete=Sind Sie sicher, dass Sie den(die) ausgew\u00E4hlten Agents l\u00F6schen wollen?
+label.moveToAgentGroup=Verschieben nach:
