--- a/sipxpbx/WEB-INF/openacd/OpenAcdClientsPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdClientsPanel.properties
@@ -1,6 +1,6 @@
-link.addClient=Add new Client
+link.addClient=F\u00FCge neuen Client hinzu
 name=Name
-identity=Identity
-description=Description
-confirm.delete=Are you sure you want to delete selected client(s)?
-msg.err.queueClient=Cannot delete {0} clients. The Client is in use and can not be deleted.
+identity=Identit\u00E4t
+description=Beschreibung
+confirm.delete=Sind Sie sicher, dass Sie den(die) ausgew\u00E4hlten Client(s) l\u00F6schen wollen?
+msg.err.queueClient=Es ist nicht m\u00F6glich {0} Clients zu l\u00F6schen. Der Client ist in Benutzung und kann nicht gel\u00F6scht werden.
