--- a/sipxpbx/WEB-INF/openacd/OpenAcdCommands.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdCommands.properties
@@ -1,4 +1,4 @@
-add=Add Dial String
-name=Dial String Name
-extension=Extension
-confirm.delete=Are you sure you want to delete selected dial string(s)?
+add=F\u00FCge Wahl String hinzu
+name=Wahl String Name
+extension=Erweiterung
+confirm.delete=Sind Sie sicher, dass Sie den(die) ausgew\u00E4hlten Wahl string(s) l\u00F6schen wollen?
