--- a/sipxpbx/WEB-INF/openacd/OpenAcdLines.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdLines.properties
@@ -1,9 +1,9 @@
 #Created by JInto - www.guh-software.de
 #Fri Jan 20 14:11:30 EET 2012
-add=Add Line
+add=Füge Line hinzu
 client=Client
-extension=Line Extension
-queue=Queue
-regex=Uses Regex
+extension=Line Erweiterung
+queue=Warteschlange
+regex=Benutzt Regex
 usesregex.off=NO
 usesregex.on=YES
