--- a/sipxpbx/WEB-INF/openacd/OpenAcdLines.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdLines.properties
@@ -1,6 +1,6 @@
 #Created by JInto - www.guh-software.de
 #Fri Jan 20 14:11:30 EET 2012
-add=Füge Line hinzu
+add=F\u00FCge Line hinzu
 client=Client
 extension=Line Erweiterung
 queue=Warteschlange
