--- a/sipxpbx/WEB-INF/openacd/OpenAcdQueueGroupsPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdQueueGroupsPanel.properties
@@ -1,7 +1,7 @@
-link.addQueueGroup=Add new Queue Group
+link.addQueueGroup=F\u00FCge neue Warteschlangen Gruppe hinzu
 name=Name
-sort=Sort
-queueCount=Number of Queues
-description=Description
-confirm.delete=Are you sure you want to delete selected queue group(s)?
-msg.err.queueGroupDeletion=Cannot delete {0} groups. Make sure they are not default group or not contains queues that are in use.
+sort=Art
+queueCount=Nummer an Warteschlangen
+description=Beschreibung
+confirm.delete=Sind Sie sicher, dass Sie die ausgew\u00E4hlte(n) Warteschlangen Gruppen l\u00F6schen wollen?
+msg.err.queueGroupDeletion=Es ist nicht m\u00F6glich {0} Gruppen zu l\u00F6schen. Vergewissern Sie sich dass es nicht die Default Gruppe ist oder keine Warteschlangen enth\u00E4lt, die in Benutzung sind.
