--- a/sipxpbx/WEB-INF/openacd/OpenAcdQueuesPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdQueuesPanel.properties
@@ -1,8 +1,8 @@
-link.addQueue=Add new Queue
+link.addQueue=F\u00FCge neue Warteschlange hinzu
 name=Name
-weight=Weight
-description=Description
-queueGroup=Queue Group
-confirm.delete=Are you sure you want to delete selected queue (s)?
-label.moveToQueueGroup=Move to:
-msg.err.queueDeletion=Cannot delete {0} queues. Make sure they are not default queue or in use.
+weight=Gewicht
+description=Beschreibung
+queueGroup=Warteschlangen Gruppe
+confirm.delete=Sind Sie sicher, dass Sie die ausgew\u00E4hlte(n) Warteschlangen l\u00F6schen wollen?
+label.moveToQueueGroup=Bewege nach:
+msg.err.queueDeletion=Es ist nicht m\u00F6glich {0} Warteschlangen zu l\u00F6schen. Stellen Sie sicher, dass es nicht die Default Gruppe ist, oder in Benutzung.
