--- a/sipxpbx/WEB-INF/openacd/OpenAcdRecipeComponent.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdRecipeComponent.properties
@@ -1,23 +1,23 @@
-recipe=Recipe
-link.addRecipeStep=Add Recipe Step
-criteria=Criteria
-action=Action
-add_skills=Add Skills
-remove_skills=Remove Skills
-set_priority=Set Priority
-prioritize=Prioritize
-deprioritize=Deprioritize
-voicemail=Send to Voicemail
-announce=Media Announce
-run_once=Run Once
-run_many=Run Many
-confirm.delete=Are you sure you want to delete selected recipe step(s)?
-action.priority=Set Priority Action
-action.announce=Media Announce Action
-description.add_skills=Add skills to the media, requiring an agent needs those skills to handle the media. Narrows the agents able to field the call.
-description.remove_skills=Removes skills from the media, increasing the number of agents able to handle the media.
-description.set_priority=Set the media's priority to an arbitrary value
-description.prioritize=Increase the media's priority by one
-description.deprioritize=Decrease the media's priority by one
-description.voicemail=If a media supports voicemail, this will direct the media there. The current media is ended, and a new voicemail media is started. If the media does not support voicemail, this is ignored.
-description.announce=If a media supports announcements, this will send the arbitary data defined here to the media. If the media does not, the action is ignored.
+recipe=Rezept
+link.addRecipeStep=F\u00FCge Rezept Schritt hinzu
+criteria=Kriterien
+action=Aktion
+add_skills=F\u00FCge F\u00E4higkeiten hinzu
+remove_skills=Entferne F\u00E4higkeiten
+set_priority=Setze Priorit\u00E4t
+prioritize=Priorisiere
+deprioritize=Depriorisiere
+voicemail=An Voicemail gesendet
+announce=Medien Ansage
+run_once=F\u00FChre einmal aus
+run_many=F\u00FChre \u00F6fter aus
+confirm.delete=Sind Sie sicher, dass Sie die ausgew\u00E4hlten Recipe Schritte l\u00F6schen wollen?
+action.priority=Setze priotisierte Aktion
+action.announce=Medien Ansage Aktion
+description.add_skills=F\u00FCge F\u00E4higkeiten zu Medien hinzu, vorausgesetzt ein Agent braucht diese F\u00E4higkeiten um Medien zu verwenden.Begrenzt den Agent den Anruf zu beantworten.
+description.remove_skills=Entferne F\u00E4higkeiten von Medien, erh\u00F6ht die Nummer an Agents die in der Lage sind Medien zu verwenden.
+description.set_priority=Setze die Priorit\u00E4t der Medien auf einen beliebigen Wert
+description.prioritize=Erhöhe die Priorit\u00E4t der Medien um eins
+description.deprioritize=Erniedrige die Priorit\u00E4t der Medien um eins
+description.voicemail=Falls Medien Voicemail unterstützen, wird dies Medien dorthin weiterleiten. Momentane Medien werden gestoppt und ein neues Voicemail wird gestartet. Falls Medien Voicemail nicht unterstützen, wird dies ignoriert.
+description.announce=Falls Medien Ansagen unterst\u00FCtzen, wird dies die jeweiligen Werte, welche hier definiert wurden an die Voicemail schicken. Falls Medien das nicht unterst\u00FCtzen wird diese Aktion ignoriert.
