--- a/sipxpbx/WEB-INF/openacd/OpenAcdRecipeConditionComponent.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdRecipeConditionComponent.properties
@@ -1,47 +1,47 @@
-available_agents=Agents Available
-caller_id=Caller ID
-caller_name=Caller Name
-calls_queued=Calls in Queue
+available_agents=Agents verf\u00FCgbar
+caller_id=Anrufer ID
+caller_name=Anrufer Name
+calls_queued=Anrufe in Warteschlange
 client=Client
-client_calls_queued=Client's Queued
-condition.value=Condition
-description.available_agents=Total number of agents regardless of if they could actually take the call.
-description.caller_id=The id portion of the media's caller identifier. This can be a regular expression; do not enclose it with slashes.
-description.caller_name=The name portion of the media's caller id. This can be a regular expression; do not enclose it with slashes.
-description.calls_queued=Number of calls in the same queue as the media.
-description.client=The client whom the media is for.
-description.client_calls_queued=Number of other media in this queue to share a client with this media.
-description.eligible_agents=Number of agents that could actually answer the call.
-description.hour=Time of day
-description.media_type=Media types are voice, email, voicemail, or call.
-description.queue_position=Position in queue as 1, 2, 3, etc.
-description.ticks=A tick is 1 second, interval of 5 makes the condition true every 5 secs.
-description.weekday=The week days.
-eligible_agents=Agents Eligible
-greater=is greater than
-hour=Hour
-is=is
-isNot=is not
-if=If
-then=then
-and=and
-run_once=Run Once
-run_many=Run Many
-friday=Friday
+client_calls_queued=Client's in der Warteschlange
+condition.value=Konditionen
+description.available_agents=Totale Anzahl an Agents, abgesehn davon ob sie im Moment \u00FCberhaupt Anrufe annehmen k\u00F6nnen.
+description.caller_id=Der ID Teil des Medien Anrufer Identifizierers. Dies kann ein regul\u00E4rer Ausdruck sein; schließen Sie diesen nicht mit slashes.
+description.caller_name=Der Name Teil des Medien Anrufer Identifizierers. Dies kann ein regul\u00E4rer Ausdruck sein; schließen Sie diesen nicht mit slashes.
+description.calls_queued=Anzahl der Anrufe in der selben Warteschlange wie Medien.
+description.client=Der Client f\u00FCr welchen Medien bestimmt sind.
+description.client_calls_queued=Anzahl der anderen Medien in dieser Warteschlange um einen Client mit diesen Medien zu teilen.
+description.eligible_agents=Anzahl der Agenten, welche gerade den Anruf entgegennehmen k\u00F6nnen.
+description.hour=Zeit am Tag
+description.media_type=Medien Typen sind Stimme, E-Mail, Voicemail, oder call.
+description.queue_position=Position in der Warteschlange, wie, 1, 2, 3, etc.
+description.ticks=Ein tick ist  1 Sekunde, Interval von 5 macht die Bedingung alle 5 Sekunden wahr.
+description.weekday=Die Wochentage.
+eligible_agents=Agents ausw\u00E4hlbar
+greater=ist h\u00F6her als
+hour=Stunde
+is=ist
+isNot=ist nicht
+if=Falls
+then=dann
+and=und
+run_once=F\u00FChre einmal aus
+run_many=F\u00FChre \u00F6fter aus
+friday=Freitag
 chat=Chat
-email=Email
-voice=Voice
+email=E-mail
+voice=Stimme
 voicemail=Voicemail
-monday=Monday
-saturday=Saturday
-sunday=Sunday
-thursday=Thursday
-tuesday=Tuesday
-wednesday=Wednesday
-less=is less than
-link.addRecipeCondition=Add criteria
-link.delete=Delete
-media_type=Media Type
-queue_position=Position in Queue
+monday=Montag
+saturday=Samstag
+sunday=Sonntag
+thursday=Donnerstag
+tuesday=Dienstag
+wednesday=Mittwoch
+less=ist kleiner als
+link.addRecipeCondition=F\u00FCge Kriterien hinzu
+link.delete=L\u00F6sche
+media_type=Medien Typ
+queue_position=Position in der Warteschlange
 ticks=Tick Interval
-weekday=Day of Week
+weekday=Tag der Woche
