--- a/sipxpbx/WEB-INF/openacd/OpenAcdReleaseCodesPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdReleaseCodesPanel.properties
@@ -1,7 +1,7 @@
-link.addReleaseCode=Add new Release Code
+link.addReleaseCode=F\u00FCge neuen Release Code hinzu
 label=Label
 bias=Bias
-label.bias.negative=Negative
+label.bias.negative=Negativ
 label.bias.neutral=Neutral
-label.bias.positive=Positive
-confirm.delete=Are you sure you want to delete selected release code(s)?
+label.bias.positive=Positiv
+confirm.delete=Sind Sie sicher, dass Sie den ausgew\u00E4hlten Release Code l\u00F6schen wollen?
