--- a/sipxpbx/WEB-INF/openacd/OpenAcdSkillGroupsPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdSkillGroupsPanel.properties
@@ -1,7 +1,7 @@
-link.addSkillGroup=Add new Skill Group
+link.addSkillGroup=F\u00FCge neue F\u00E4higkeiten Gruppe hinzu
 name=Name
-skillCount=Number of Skills
-description=Description
-confirm.delete=Are you sure you want to delete selected skill group(s)?
-msg.err.magicSkillGroupDeletion=The 'Magic' skill group can't be deleted!
-msg.err.skillGroupDeletion=Cannot delete {0} skill groups. Make sure they do not contain skills in use.
+skillCount=Anzahl der F\u00E4higkeiten
+description=Beschreibung
+confirm.delete=Sind Sie sicher, dass Sie die ausgew\u00E4hlte(n) F\u00E4higkeiten Gruppe(n) l\u00F6schen wollen?
+msg.err.magicSkillGroupDeletion=Die 'Magic' F\u00E4higkeit Gruppe kann nicht gel\u00F6scht werden!
+msg.err.skillGroupDeletion=Nicht m\u00F6glich {0} F\u00E4higkeiten Gruppe zu l\u00F6schen. Stellen Sie sicher, dass Sie keine F\u00E4higkeiten enthalten, die gerade in Benutzung sind.
