--- a/sipxpbx/WEB-INF/openacd/OpenAcdSkillsList.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdSkillsList.properties
@@ -1,4 +1,4 @@
-label.skills=Skills
-label.queues=Queues
+label.skills=Fertigkeiten
+label.queues=Warteschlangen
 label.clients=Clients
-label.profiles=Agent Groups
+label.profiles=Agent Gruppen
