--- a/sipxpbx/WEB-INF/openacd/OpenAcdSkillsPanel.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdSkillsPanel.properties
@@ -1,7 +1,7 @@
-link.addSkill=Add new Skill
+link.addSkill=F\u00FCge neue F\u00E4higkeiten hinzu
 name=Name
 atom=Atom
-skillGroup=Skill group
-description=Description
-confirm.delete=Are you sure you want to delete selected skill(s)?
-msg.err.skillsDeletion=Cannot delete {0} skills. Make sure they are not default skills or in use.
+skillGroup=F\u00E4higkeiten Gruppe
+description=Beschreibung
+confirm.delete=Sind Sie sicher, dass Sie die gew\u00E4hlten Fertigkeiten wirklich l\u00F6schen wollen?
+msg.err.skillsDeletion=Nicht m\u00F6glich {0} Fertigkeiten zu l\u00F6schen. Stellen Sie sicher, dass es keine default Fertigkeiten sind, oder in Benutzung.
