--- a/sipxpbx/WEB-INF/paging/EditPagingGroupPage.properties
+++ b/sipxpbx/WEB-INF/paging/EditPagingGroupPage.properties
@@ -1,23 +1,23 @@
-title=Paging Group
-label.enableGroup=Enable
-label.number=Page Group Number
-label.description=Description
-label.extensions=Extensions
-label.pageBeep=Beep Sound
-label.timeout=Page Timeout (in seconds)
-addExtension=Add Extension
-error.select=No sound selected
-error.duplicateGroupNumbers=A paging group with group number {0} is already defined
-quick.help=<p>Select or upload a specific file to play for the "beep" when this page group is called. <br/>\
-  The page group number represents the digits that follow the prefix. <br/>\
-  For example, with the prefix set to *77, when dialing "*771" will invoke the page to page group 1. <br/>\
-  If dialing "*7742" that will invoke the page to page group 42.<br/>\
-  The page timeout is configurable having 600 seconds as max limit.</p>\
-  A page timeout of 0 means never time out.</p>\
-  <p><strong>Warning:</strong> Paging does not work reliably if an extension included in the paging group has multiple appearances. \
-  It is recommended to create a separate extension for paging on the phone in such cases.</p>\
-  <p><strong>Note:</strong> Paging prefix and paging group number must not form an already existing alias. For instance if you \
-  have a user 2018, you cannot have a paging prefix 20 and a paging group number 18. An error will be displayed to prevent this situation.</p>
-prompt.selectRings=Search for the user to be added to paging group.
-title.selectRings=Add Users to Paging Group
-error.aliasinuse=Alias {0} is in use by a user or system. Note that the code is formed by the paging prefix and the paging group number.
+title=Paging Gruppe
+label.enableGroup=Aktivieren
+label.number=Page Gruppen Nummer
+label.description=Beschreibung
+label.extensions=Erweiterungen
+label.pageBeep=Beep Ton
+label.timeout=Page Timeout (in Sekunden)
+addExtension=F\u00FCge Erweiterung hinzu
+error.select=Kein Ton ausgew\u00E4hlt
+error.duplicateGroupNumbers=Eine Paging Gruppe mit der Gruppen Nummer {0} ist bereits definiert.
+quick.help=<p>W\u00E4hlen oder uploaden Sie eine bestimmte Datei, die gespielt werden soll für den "beep" wenn diese Page Gruppe angerufen wird. <br/>\
+  Die Page Gruppen Nummer wird durch die Zahlen die dem Prefix folgen repr\u00E4sentiert. <br/>\
+  Zum Beispiel, wenn das Prefix auf *77 gestellt ist, die Nummer *771 gew\u00E4hlt wird, wird Page auf Page Gruppe 1 aufgerufen. <br/>\
+  Falls *7742 gew\u00E4hlt wird, dann wird die Page auf Page Gruppe 42 aufgerufen.<br/>\
+  Der Page Timeout ist konfigurierbar, mit einem Maximum von 600 Sekunden.</p>\
+  Ein Page Timeout von 0 bedeutet, dass es keinen Timeout gibt.</p>\
+  <p><strong>Warnung:</strong> Paging funktioniert nicht zuverl\u00E4ssig, falls eine Erweiterung in der Paging Grupe mehrere Erscheinungsformen hat. \
+  Es wird empfohlen, in solchen F\u00E4llen eine eigene Erweiterung für Paging am Telefon zu erstellen.</p>\
+  <p><strong>Hinweis:</strong> Paging Prefix und Paging Gruppen d\u00FCrfen keinen bereits existierenden Alias formen. Zum Beispiel, \
+  wenn Sie einen User 2018 haben, k\u00F6nnen Sie kein Paging Prefix 20 und keine Paging Gruppen Nummer 18 haben. Ein Fehler wird angezeigt um dies zu verhindern.</p>
+prompt.selectRings=Suchen Sie nach dem Benutzer, der hinzugef\u00FCgt werden soll.
+title.selectRings=F\u00FCgen Sie Benutzer zu der Paging Gruppe hinzu
+error.aliasinuse=Alias {0} ist bereits in Benutzung durch einen Benutzer oder das System. Nehmen Sie zur Kenntnis, dass der Code durch das Paging Prefix und die Paging Gruppen Nummer geformt wird.
