--- a/sipxpbx/WEB-INF/paging/PagingGroupsPage.properties
+++ b/sipxpbx/WEB-INF/paging/PagingGroupsPage.properties
@@ -1,22 +1,22 @@
-title=Paging Groups
-link.dialPlans=Dial Plans
-label.prefix=Paging prefix
+title=Paging Gruppen
+link.dialPlans=Anruf Pl\u00E4ne
+label.prefix=Paging Prefix
 label.traceLevel=SIP Trace Level
-button.save=Save
-error.pagingPrefix=Paging prefix cannot be empty.
-add=Add Paging Group
-pageGroupNumber=Page Group Number
-enabled=Enabled
-description=Description
-userCount=Size
-confirm.delete=Are you sure you want to delete selected group(s)?
-button.restart=Activate
-confirm.restart=Are you sure you want to activate the configuration and restart paging server?
-quick.help=The paging group contains a list of extensions to call when the paging prefix followed by the paging group number is dialed.<br/>\
-	You can make changes to the paging server configuration without affecting the running server.<br/>\
-	The paging server will be automatically restarted when the configuration is changed.<br/>\<br/>\
-        Avaya 1200 IP Deskphone series, Polycom and LG Nortel phones are automatically configured to auto-answer a page. Other phones \
-        need to be configured manually.
-error.aliasinuse=Alias {0} is in use by a user or system. Note that the code is formed by the paging prefix and the paging group number.
-tab.paging=Groups
-tab.settings=Settings
+button.save=Sichern
+error.pagingPrefix=Paging Prefix darf nicht leer sein.
+add=F\u00FCgen Sie eine Paging Gruppe hinzu
+pageGroupNumber=Page Gruppen Nummer
+enabled=Aktiviert
+description=Beschreibung
+userCount=Gr\u00F6sse
+confirm.delete=Sind Sie sicher, dass Sie die ausgew\u00E4hlte(n) Gruppe(n) l\u00F6schen wollen?
+button.restart=Aktivieren
+confirm.restart=Sind Sie sicher, dass Sie die Konfiguration aktivieren wollen und den Paging Server neustarten?
+quick.help=Die Paging Gruppe enth\u00E4lt eine Liste von Erweiterungen, die angerufen werden, wenn das Paging Prefix gefolgt von der Paging Gruppen Nummer gew\u00E4hlt wird.<br/>\
+	Sie können \u00E4nderungen an der Paging Server Konfiguration machen, ohne dass es den laufenden Server betrifft.<br/>\
+	Der Paging Server wird automatisch neu gestartet, wenn die Konfiguration ver\u00E4ndert wird.<br/>\<br/>\
+        Avaya 1200 IP Deskphone series, Polycom und LG Nortel Telefone werden automatisch konfiguriert eine Page zu beantworten. Andere Telefone \
+        m\u00FCssen manuell konfiguriert werden.
+error.aliasinuse=Alias {0} wird bereits von einem Benutzer oder dem System genutzt. Nehmen Sie zur Kenntnis, dass der Code aus dem Paging Prefix und der Paging Gruppen Nummer geformt wird.
+tab.paging=Gruppen
+tab.settings=Einstellungen
